[gd_scene load_steps=4 format=3 uid="uid://btxlvte5tx00w"]

[ext_resource type="Script" path="res://scenes/button_project.gd" id="1_351wc"]
[ext_resource type="PackedScene" uid="uid://cx7n8ve8onhkt" path="res://scenes/button_text.tscn" id="1_dsytr"]
[ext_resource type="PackedScene" uid="uid://dlxj1jtgqk6ft" path="res://scenes/button_generic.tscn" id="2_j52e6"]

[node name="ProjectButton" type="MarginContainer"]
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
script = ExtResource("1_351wc")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ProjectSelectorButton" parent="HBoxContainer" instance=ExtResource("1_dsytr")]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
size_flags_horizontal = 3
button_themetype = "ProjectButtonColor"
background_themetype = "TaskPanel"

[node name="SmallButtonsContainer" type="VBoxContainer" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="EditButton" parent="HBoxContainer/SmallButtonsContainer" instance=ExtResource("2_j52e6")]
unique_name_in_owner = true
layout_mode = 2
button_themetype = "EditButton"

[node name="DeleteButton" parent="HBoxContainer/SmallButtonsContainer" instance=ExtResource("2_j52e6")]
unique_name_in_owner = true
layout_mode = 2
button_themetype = "CancelButton"

[connection signal="button_clicked" from="HBoxContainer/ProjectSelectorButton" to="." method="_on_project_selector_button_button_clicked"]
[connection signal="button_clicked" from="HBoxContainer/SmallButtonsContainer/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="button_clicked" from="HBoxContainer/SmallButtonsContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
